fix: GDPR bottom modal z-index

--- a/src/styles/components/_gdpr.scss
+++ b/src/styles/components/_gdpr.scss
@@ -5,6 +5,7 @@
 	width: auto !important;
 	border-top: 0 !important;
 	border-left: 1px solid rgb(var(--color-white)) !important;
+	z-index: 999999 !important;
 
 	p {
 		font-size: inherit !important;
